tests/rosetta/out/Erlang/abstract-type.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2025-07-16T12:03:27Z
% abstract-type.erl - generated from abstract-type.mochi

beastKind(B) ->
    (case B of #{"__name" := "Dog", k := K, _ := _} -> K; #{"__name" := "Cat", k := K, _ := _} -> K end).

beastName(B) ->
    (case B of #{"__name" := "Dog", _ := _, n := N} -> N; #{"__name" := "Cat", _ := _, n := N} -> N end).

beastCry(B) ->
    (case B of #{"__name" := "Dog", _ := _, _ := _} -> "Woof"; #{"__name" := "Cat", _ := _, _ := _} -> "Meow" end).

bprint(B) ->
    io:format("~p~n", [beastName(B) ++ ", who's a " ++ beastKind(B) ++ ", cries: \"" ++ beastCry(B) ++ "\"."]).

main() ->
    D = #{"__name" => "Dog", kind => "labrador", name => "Max"},
    C = #{"__name" => "Cat", kind => "siamese", name => "Sammy"},
    bprint(D),
    bprint(C).

main(_) ->
    main().
